--- a/meson.build
+++ b/meson.build
@@ -28,3 +28,8 @@ project('tears-engine', 'cpp'
     license: 'LGPL',
     default_options: ['cpp_std=c++17'])
 
+#------------------------------------------------------------------------------#
+# Variables
+#------------------------------------------------------------------------------#
+executable_name = 'tears'
+
