--- a/meson.build
+++ b/meson.build
@@ -33,3 +33,11 @@ project('tears-engine', 'cpp'
 #------------------------------------------------------------------------------#
 executable_name = 'tears'
 
+#------------------------------------------------------------------------------#
+# Sub directories
+#------------------------------------------------------------------------------#
+subdir('lib')
+subdir('doc')
+subdir('tears')
+
+#------------------------------------------------------------------------------#
