fix missing comma

--- a/meson.build
+++ b/meson.build
@@ -23,7 +23,7 @@
 #------------------------------------------------------------------------------#
 # Project Setup
 #------------------------------------------------------------------------------#
-project('tears-engine', 'cpp'
+project('tears-engine', 'cpp',
     version: '0.1.0',
     license: 'LGPL',
     default_options: ['cpp_std=c++17'])
